--- a/lottery-infrastructure/pom.xml
+++ b/lottery-infrastructure/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>lottery-domain</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+<!--        自己研发的-->
+        <dependency>
+            <groupId>com.itwang</groupId>
+            <artifactId>dbRouter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
