--- a/lottery-domain/pom.xml
+++ b/lottery-domain/pom.xml
@@ -40,6 +40,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.itwang</groupId>
+            <artifactId>dbRouter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
