--- a/lottery-application/pom.xml
+++ b/lottery-application/pom.xml
@@ -11,5 +11,19 @@
 
     <artifactId>lottery-application</artifactId>
 
+    <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>com.itwang</groupId>-->
+<!--            <artifactId>lottery-common</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>com.itwang</groupId>
+            <artifactId>lottery-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
